azureps-cmdlets-docs/ResourceManager/AzureRM.Storage/v2.6.0/AzureRM.Storage.md
---
Module Name: AzureRM.Storage
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link:
  [object Object]:
Help Version:
  [object Object]: null
Locale: en-US
ms.assetid: 5AE37139-695A-417C-95D8-102A9ED55851
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/3.6.0/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
gitcommit: https://github.com/Visual-Studio-China/azure-powershell/blob/94e42834e29c78cafba9e3f1e99e14af92561036
---

# AzureRM.Storage Module
## Description
This topic displays help topics for the Azure Storage Management Cmdlets.

## AzureRM.Storage Cmdlets
### [Get-AzureRmStorageAccount](Get-AzureRmStorageAccount.md)
Gets a Storage account.

### [Get-AzureRmStorageAccountKey](Get-AzureRmStorageAccountKey.md)
Gets the access keys for an Azure Storage account.

### [Get-AzureRmStorageAccountNameAvailability](Get-AzureRmStorageAccountNameAvailability.md)
Checks the availability of a storage account name.

### [Get-AzureRmStorageUsage](Get-AzureRmStorageUsage.md)
Gets the Storage resource usage of the current subscription.

### [New-AzureRmStorageAccount](New-AzureRmStorageAccount.md)
Creates a Storage account.

### [New-AzureRmStorageAccountKey](New-AzureRmStorageAccountKey.md)
Regenerates a storage key for an Azure Storage account.

### [Remove-AzureRmStorageAccount](Remove-AzureRmStorageAccount.md)
Removes a Storage account from Azure.

### [Set-AzureRmCurrentStorageAccount](Set-AzureRmCurrentStorageAccount.md)
Modifies the current Storage account of the specified subscription.

### [Set-AzureRmStorageAccount](Set-AzureRmStorageAccount.md)
Modifies a Storage account.

