azureps-cmdlets-docs/ResourceManager/AzureRM.Storage/v3.4.0/AzureRM.Storage.md
---
Module Name: AzureRM.Storage
Module Guid: XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
Download Help Link:
  [object Object]:
Help Version:
  [object Object]: null
Locale: en-US
content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/preview/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
original_content_git_url: https://github.com/Visual-Studio-China/azure-powershell/blob/preview/src/ResourceManager/Storage/Commands.Management.Storage/help/AzureRM.Storage.md
---

# AzureRM.Storage Module
## Description
This topic displays help topics for the Azure Storage Management Cmdlets.

## AzureRM.Storage Cmdlets
### [Get-AzureRmStorageAccount](Get-AzureRmStorageAccount.md)
Gets a Storage account.

### [Get-AzureRmStorageAccountKey](Get-AzureRmStorageAccountKey.md)
Gets the access keys for an Azure Storage account.

### [Get-AzureRmStorageAccountNameAvailability](Get-AzureRmStorageAccountNameAvailability.md)
Checks the availability of a storage account name.

### [Get-AzureRmStorageUsage](Get-AzureRmStorageUsage.md)
Gets the Storage resource usage of the current subscription.

### [New-AzureRmStorageAccount](New-AzureRmStorageAccount.md)
Creates a Storage account.

### [New-AzureRmStorageAccountKey](New-AzureRmStorageAccountKey.md)
Regenerates a storage key for an Azure Storage account.

### [Remove-AzureRmStorageAccount](Remove-AzureRmStorageAccount.md)
Removes a Storage account from Azure.

### [Set-AzureRmCurrentStorageAccount](Set-AzureRmCurrentStorageAccount.md)
Modifies the current Storage account of the specified subscription.

### [Set-AzureRmStorageAccount](Set-AzureRmStorageAccount.md)
Modifies a Storage account.

t](Remove-AzureRmStorageAccount.md)
Removes a Storage account from Azure.

### [Remove-AzureRmStorageAccountNetworkRule](Remove-AzureRmStorageAccountNetworkRule.md)
Remove IpRules or VirtualNetworkRules from the NetWorkRule property of a Storage Account

### [Set-AzureRmCurrentStorageAccount](Set-AzureRmCurrentStorageAccount.md)
Modifies the current Storage account of the specified subscription.

### [Set-AzureRmStorageAccount](Set-AzureRmStorageAccount.md)
Modifies a Storage account.

### [Update-AzureRmStorageAccountNetworkRuleSet](Update-AzureRmStorageAccountNetworkRuleSet.md)
Update the NetworkRule property of a Storage Account

